--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Deals/DealsCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Deals/DealsCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DealsCell" id="gTV-IL-0wX" customClass="DealsCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="DealsCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="319" height="174"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -31,10 +31,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
-                            <constraint firstItem="KuE-X1-IfB" firstAttribute="top" secondItem="N6y-Mc-Bvw" secondAttribute="top" id="8Y4-4m-TAz"/>
-                            <constraint firstAttribute="trailing" secondItem="KuE-X1-IfB" secondAttribute="trailing" id="ba0-Pa-NSl"/>
-                            <constraint firstAttribute="bottom" secondItem="KuE-X1-IfB" secondAttribute="bottom" id="lEW-Ch-hBK"/>
-                            <constraint firstItem="KuE-X1-IfB" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" id="rwg-BW-aSt"/>
+                            <constraint firstItem="KuE-X1-IfB" firstAttribute="top" secondItem="N6y-Mc-Bvw" secondAttribute="top" id="7Kl-NJ-0wP"/>
+                            <constraint firstAttribute="bottom" secondItem="KuE-X1-IfB" secondAttribute="bottom" id="AoS-7q-o2Y"/>
+                            <constraint firstItem="KuE-X1-IfB" firstAttribute="leading" secondItem="N6y-Mc-Bvw" secondAttribute="leading" id="csc-8e-oBh"/>
+                            <constraint firstAttribute="trailing" secondItem="KuE-X1-IfB" secondAttribute="trailing" id="mGh-NX-ufZ"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -52,6 +52,9 @@
                 <constraint firstItem="N6y-Mc-Bvw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="suB-YM-IjG"/>
             </constraints>
             <size key="customSize" width="319" height="174"/>
+            <connections>
+                <outlet property="dealImage" destination="KuE-X1-IfB" id="9sc-mo-fgz"/>
+            </connections>
             <point key="canvasLocation" x="-70" y="-54.028436018957343"/>
         </collectionViewCell>
     </objects>
