--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Featured/FeaturedCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Featured/FeaturedCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FeaturedCell" id="gTV-IL-0wX" customClass="FeaturedCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="FeaturedCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="206" height="290"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -183,6 +183,10 @@
                     <size key="value" width="0.0" height="0.0"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="featuredImage" destination="trX-lI-TFe" id="28B-aU-9AI"/>
+                <outlet property="featuredLabel" destination="AtP-I1-vFG" id="znh-ci-4uv"/>
+            </connections>
             <point key="canvasLocation" x="33.846153846153847" y="-12.085308056872037"/>
         </collectionViewCell>
     </objects>
